<resources>
    <string name="app_name">Medspace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developers">Developers</string>b
     <string name="logout">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_call">Video Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="book_appointment">Book appointment</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="phone_call">Phone call</string>
    <string name="phone">Phone</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_of_service">I agree to the <u>terms of service</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="registration_form">Registration Form</string>
    <string name="sign_in">Sign In</string>
    <string name="location">Location</string>
    <string name="action_exit">Exit</string>
    <string name="note_carrier_charges_apply">NOTE: carrier charges apply</string>
    <string name="dash">-</string>
    <string name="work_experience">Work Experience</string>
    <string name="research_publications">Research/ Publications</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="no_doctors_found_please_come_back_later">No doctors found.Please come back later</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Profile</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Display Name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="doctors">Doctors</string>
</resources>