<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.myspecialist.UserInterface.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/to_doctor_list"
            app:destination="@+id/nav_doctor_list"/>
    </fragment>

    <fragment
        android:id="@+id/nav_developers"
        android:name="com.myspecialist.UserInterface.ui.DevelopersFragment"
        android:label="@string/developers"
        tools:layout="@layout/developers" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.myspecialist.UserInterface.ui.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_doctor_list"
        android:name="com.myspecialist.UserInterface.DoctorListFragment"
        android:label="Doctor List"
        tools:layout="@layout/doctor_list"/>
</navigation>