<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="7dp"
    app:cardCornerRadius="7dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@android:color/white"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_appointment"
                    android:layout_margin="5dp"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/rubik_bold"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/dismiss_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/close"/>
        </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:background="@drawable/textview_background" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textview_background"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/phone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxEms="10"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:hint="@string/date"/>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:hint="@string/time"/>
                </LinearLayout>

                <Button
                    android:id="@+id/book_appointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="14dp"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/book_appointment"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>