<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitle="Disclaimer"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorPrimary"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scrollbars="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="// Terms of service"
                android:textSize="15sp"
                android:fontFamily="@font/rubik_light"/>
        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_bold"
                android:layout_margin="5dp"
                android:text="@string/accept"/>
            <Button
                android:id="@+id/decline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:layout_margin="5dp"
                android:fontFamily="@font/rubik_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/decline"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>