<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface.DoctorListFragment">

    <!-- Shows doctors list after user clicks on a category -->

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/doctor_child"
        android:id="@+id/recyclerView"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/poor_connection_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_broken_heart"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:textSize="15sp"
            android:text="@string/check_your_internet_connection"/>
        <Button
            android:id="@+id/retry_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="Retry"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/empty_database_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_black"
            android:textSize="35sp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="5dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_heart"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:textSize="15sp"
            android:text="@string/no_doctors_found_please_come_back_later"/>
    </LinearLayout>

</RelativeLayout>