<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="7dp"
    app:cardCornerRadius="7dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/send_sms_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send SMS"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="17dp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/rubik_bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/send_sms_title"
                    android:layout_marginBottom="7dp"
                    android:layout_marginStart="25dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textColor="@android:color/white"
                        android:text="To:"/>
                    <TextView
                        android:id="@+id/doctor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="Doctor Name"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_carrier_charges_apply"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/rubik_light"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/dismiss_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/close"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sms_text"
                    android:hint="Type your message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/send_sms_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_send"
                app:tint="@null"
                android:layout_gravity="bottom"
                android:contentDescription="@string/phone_call"
                android:layout_margin="5dp"
                app:backgroundTint="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>